src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

body {
  background-color: #ffffff;
}
.info{
  background: #E5E5E5;
}

/*----------- MEDIA QUERIES ------------*/

@media  screen and (min-width: 768) and (max-width: 1940){

  .container-left-text{
  margin-left: 1150px;
  text-align: right;
  /* border: 1px solid red; */
}

  .container-right-text{
    margin-right: 1200px;
  }
  
  .container-create-store{
    margin-left: 500px;
  }
  .text-padding {
    padding: 50px;
  }
} 

